# El-Furbo-App

./: README.md
admin/: app.py  pyproject.toml
admin/src/core/: __init__.py  database.py  seeds.py
admin/src/core/models/user/: __init__.py  user.py
admin/src/web/: __init__.py  config.py
admin/src/web/controllers/: user.py
admin/src/web/templates/: home.html
admin/src/web/templates/users/: users_list.html
